# maplibre-compose

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  AI_POLICY.md  CLAUDE.md  CONTRIBUTING.md  build.gradle.kts  dprint.json  flake.nix  gradle.properties  hk.pkl  justfile  mise.toml  settings.gradle.kts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/actions/run-with-avd/: action.yml
.github/actions/setup-cmake/: action.yml
.github/actions/setup-gradle/: action.yml
.github/workflows/: ci.yml  daily.yml  label-ai.yml  release.yml
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: android-library-conventions.gradle.kts  spm-maplibre.gradle.kts  util.kt
demo-app/: .gitignore  build.gradle.kts  demo_app.podspec
demo-app/src/androidMain/kotlin/org/maplibre/compose/demoapp/: DemoState.android.kt
demo-app/src/commonMain/composeResources/files/styles/: colorful.json  eclipse.json  empty.json  graybeard.json
demo-app/src/commonMain/kotlin/dev/sargunv/maplibrecompose/demoapp/: DemoApp.kt  DemoMap.kt  DemoSheetContent.kt  DemoState.kt  DemoStyle.kt  StyleInfo.kt  app.kt  util.kt
demo-app/src/commonMain/kotlin/org/maplibre/compose/demoapp/: DemoMap.kt  DemoState.kt  DemoStyle.kt
demo-app/src/commonMain/kotlin/org/maplibre/compose/docsnippets/: Layers.kt  Location.kt
demo-app/src/desktopMain/kotlin/dev/sargunv/maplibrecompose/demoapp/: Main.kt  util.desktop.kt
demo-app/src/desktopMain/kotlin/org/maplibre/compose/demoapp/: DemoState.desktop.kt  Main.kt
demo-app/src/iosMain/kotlin/org/maplibre/compose/demoapp/: DemoState.ios.kt
demo-app/src/jsMain/kotlin/dev/sargunv/maplibrecompose/demoapp/: util.js.kt
docs/: mkdocs.yml
docs/docs/: getting-started.md  index.md  interaction.md  layers.md  location.md  roadmap.md  styling.md
gradle/: libs.versions.toml  swift-spm-wrapper.sh
iosApp/iosApp/: Info.plist  iOSApp.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
iosApp/scripts/: embed-kmp-framework.sh
lib/kotlin-maplibre-native/: build.gradle.kts
lib/maplibre-compose/: MODULE.md  build.gradle.kts
lib/maplibre-compose-expressions/: build.gradle.kts
lib/maplibre-compose-gms/: build.gradle.kts
lib/maplibre-compose-material3/: build.gradle.kts
lib/maplibre-compose-material3/src/commonMain/composeResources/drawable/: pending_filled.xml  recenter.xml
lib/maplibre-compose-material3/src/commonMain/composeResources/values-azb/: strings.xml
lib/maplibre-compose-material3/src/commonMain/composeResources/values-be/: strings.xml
lib/maplibre-compose-material3/src/commonMain/composeResources/values-cs/: strings.xml
lib/maplibre-compose-material3/src/commonMain/composeResources/values-cy/: strings.xml
lib/maplibre-compose-material3/src/commonMain/composeResources/values-et/: strings.xml
lib/maplibre-compose-material3/src/commonMain/composeResources/values-eu/: strings.xml
lib/maplibre-compose-material3/src/commonMain/composeResources/values-fa/: strings.xml
lib/maplibre-compose-material3/src/commonMain/composeResources/values-ga/: strings.xml
lib/maplibre-compose-material3/src/commonMain/composeResources/values-gl/: strings.xml
lib/maplibre-compose-material3/src/commonMain/composeResources/values-id/: strings.xml
lib/maplibre-compose-material3/src/commonMain/composeResources/values-ko/: strings.xml
lib/maplibre-compose-material3/src/commonMain/composeResources/values-kw/: strings.xml
lib/maplibre-compose-material3/src/commonMain/composeResources/values-ml/: strings.xml
lib/maplibre-compose-material3/src/commonMain/composeResources/values-ro/: strings.xml
lib/maplibre-compose-material3/src/commonMain/composeResources/values-sk/: strings.xml
lib/maplibre-compose-material3/src/commonMain/composeResources/values-sl/: strings.xml
lib/maplibre-compose-material3/src/commonMain/composeResources/values-sr/: strings.xml
lib/maplibre-compose-material3/src/commonMain/composeResources/values-sv/: strings.xml
lib/maplibre-compose-material3/src/commonMain/composeResources/values-zh-rTW/: strings.xml
lib/maplibre-compose/src/androidDeviceTest/: AndroidManifest.xml
lib/maplibre-native-bindings/: build.gradle.kts
lib/maplibre-native-bindings-jni/: CMakeLists.txt  CMakePresets.json  build.gradle.kts
lib/maplibre-native-bindings-jni/cmake/: target.cmake  vars.cmake
lib/maplibre-native-bindings-jni/cmake/backends/: metal.cmake  vulkan.cmake
lib/maplibre-native-bindings-jni/cmake/dependencies/: maplibre-native.cmake  simplejni.cmake
lib/maplibre-native-bindings-jni/src/main/cpp/: canvas_backend.cpp  canvas_frontend.cpp  canvas_metal_backend.mm  canvas_opengl_backend.cpp  canvas_renderer.hpp  canvas_surface.cpp  canvas_surface.mm  canvas_vulkan_backend.cpp  canvas_vulkan_backend.mm  conversions.cpp  conversions.hpp  java_classes.hpp  jawt_context.hpp  jawt_info.hpp  jni_map_observer.cpp  jni_map_observer.hpp  jni_on_load.cpp  maplibre_map.cpp  utils.hpp
lib/maplibre-native-jni/: CMakeLists.txt  CMakePresets.json  build.gradle.kts
lib/maplibre-native-jni/src/main/cpp/: awt_canvas_renderer.cpp  awt_canvas_renderer.hpp  canvas_backend.cpp  canvas_frontend.cpp  canvas_metal_backend.mm  conversions.cpp  conversions.hpp  java_classes.hpp  jni_map_observer.cpp  jni_map_observer.hpp  jni_on_load.cpp  maplibre_map.cpp
lib/maplibre-native-jni/src/main/cpp/backend/: awt_backend_factory.cpp  awt_backend_factory.hpp
lib/maplibre-native-jni/src/main/cpp/backend/gl/: awt_gl_backend.cpp  awt_gl_backend.hpp  egl_context_strategy.cpp  egl_context_strategy.hpp  gl_context_strategy.hpp  glx_context_strategy.cpp  glx_context_strategy.hpp  wgl_context_strategy.cpp  wgl_context_strategy.hpp
lib/maplibre-native-jni/src/main/cpp/backend/metal/: awt_metal_backend.hpp  awt_metal_backend.mm
lib/maplibre-native-jni/src/main/cpp/backend/vulkan/: awt_vulkan_backend.cpp  awt_vulkan_backend.hpp  awt_vulkan_backend.mm
plan/: awt-canvas-maplibre-architecture.md
scripts/: format  git-hooks  pre-commit
scripts/hooks/: pre-commit
(+494 files in other folders)
